--- a/idex.html
+++ b/idex.html
@@ -9,7 +9,7 @@
 
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/lasagna.html">Lasanga</a>
+    <a href="./recipes/lasagna.html">Lasagna</a>
     
 </body>
 </html>
