--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Teriyaki Chicken Recipe!</h1>
 
-    <img src="C:\Users\matth\repos\odin-recipes\teriyaki-chicken.webp" alt="Teriyaki Chicken Image">
+    <img src="..\teriyaki-chicken.webp" alt="Teriyaki Chicken Image">
     <h3>Description</h3>
     <p>A grilled chicken teriyaki recipe that takes only 5 ingredients!</p>
     <h3>Ingredients:</h3>
