--- a/idex.html
+++ b/idex.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
 
     <a href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
+    <a href="./recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a>
     
 </body>
 </html>
