Added link on main to garlic pasta

--- a/idex.html
+++ b/idex.html
@@ -11,6 +11,7 @@
 
     <a href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
     <a href="./recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a>
+    <a hred="./recipes/gerlic-butter-pasta.html" target="_blank" rel="noopener noreferrer">Garlic Butter Pasta</a>
     
 </body>
 </html>
