Fixed images on 2 pages

--- a/recipes/garlic-butter-pasta.html
+++ b/recipes/garlic-butter-pasta.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Garlic Butter Pasta</h1>
 
-    <img href="../Garlic-Butter-Pasta-recipe.jpg" alt="Garlic Butter Pasta Image">
+    <img src="..\Garlic-Butter-Pasta-recipe.jpg" alt="Garlic Butter Pasta Image">
     <h3>Description</h3>
     <p>This recipes is super simple and cheap!</p>
     <h3>Ingredients</h3>
