--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Grilled Cheese</h1>
 
-    <img href="../Grilled-Cheese-Sandwich-SQ.jpg" alt="Grilled Cheese Image">
+    <img src="..\Grilled-Cheese-Sandwich-SQ.jpg" alt="Grilled Cheese Image">
     <h3>Description</h3>
     <p>This recipes only takes 3 ingredients and less than 15 minutes!</p>
     <h3>Ingredients</h3>
