Added style with style.css

--- a/idex.html
+++ b/idex.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
 <body>
 
-    <h1>Odin Recipes</h1>
+    <h1 class="header1">Odin Recipes</h1>
 
-    <a href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
-    <a href="./recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a>
-    <a href="./recipes/garlic-butter-pasta.html" target="_blank" rel="noopener noreferrer">Garlic Butter Pasta</a>
+    <p>Select a recipe! </p>
+
+    <div></div>
+    <a class="page" href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Teriyaki Chicken</a>
+    <div></div> 
+    <a class="page" href="./recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a>
+    <div></div>
+    <a class="page" href="./recipes/garlic-butter-pasta.html" target="_blank" rel="noopener noreferrer">Garlic Butter Pasta</a>
     
 </body>
 </html>
