--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Teriyaki Chicken Recipe!</h1>
+    <h1 class="header1">Teriyaki Chicken Recipe!</h1>
 
     <img src="..\teriyaki-chicken.webp" alt="Teriyaki Chicken Image">
-    <h3>Description</h3>
+    <h3 class="header3">Description</h3>
     <p>A grilled chicken teriyaki recipe that takes only 5 ingredients!</p>
-    <h3>Ingredients:</h3>
+    <h3 class="header3">Ingredients:</h3>
 
     <li>1 cup Teriyaki Sauce</li>
     <li> 1/4 cup Lemon Juice</li>
@@ -19,12 +20,13 @@
     <li>2 teaspoons sesame oil</li>
     <li>4 skinless, boneless chicken breat halves</li>
 
-    <h3>Steps:</h3>
+    <h3 class="header3">Steps:</h3>
+    <div></div>
     <ol>
-    <li>Whisk teriyaki sauce, lemon juice, garlic, and sesame oil together in a bowl and pour into a resealable plastic bag. Add chicken, coat with marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for at least 1 hour to overnight, turning every so often.</li>
-    <li>When ready to cook, preheat an outdoor grill for high heat and lightly oil the grate.</li>
-    <li>Remove chicken from marinade and shake off excess. Discard remaining marinade.</li>
-    <li>Cook chicken on the preheated grill until no longer pink in the center and the juices run clear, 6 to 8 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+        <li>Whisk teriyaki sauce, lemon juice, garlic, and sesame oil together in a bowl and pour into a resealable plastic bag. Add chicken, coat with marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for at least 1 hour to overnight, turning every so often.</li>
+        <li>When ready to cook, preheat an outdoor grill for high heat and lightly oil the grate.</li>
+        <li>Remove chicken from marinade and shake off excess. Discard remaining marinade.</li>
+        <li>Cook chicken on the preheated grill until no longer pink in the center and the juices run clear, 6 to 8 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
     </ol>
 
 </body>
