--- a/recipes/garlic-butter-pasta.html
+++ b/recipes/garlic-butter-pasta.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Garlic Butter Pasta</h1>
+    <h1 class="header1">Garlic Butter Pasta</h1>
 
     <img src="..\Garlic-Butter-Pasta-recipe.jpg" alt="Garlic Butter Pasta Image">
-    <h3>Description</h3>
+    <h3 class="header3">Description:</h3>
     <p>This recipes is super simple and cheap!</p>
-    <h3>Ingredients</h3>
+    <div></div>
+    <div></div>
+    <h3 class="header3">Ingredients</h3>
 
     <li>8 oz of pasta (any kind)</li>
     <li>3 Tablespoons of Butter</li>
@@ -19,10 +22,15 @@
     <li>Salt and Pepper to taste</li>
     <li>Grated Parmesean Cheese to taste</li>
 
+    <h3 class="header3">Steps:</h3>
+    <div></div>
     <ol>
         <li>Cook the pasta: Bring a pot of salted water to a boil. Cook the pasta according to the package directions, then drain.</li>
+        <div></div>
         <li>Make the garlic butter sauce: While the pasta cooks, melt the butter in a large skillet over medium heat. Add the minced garlic and sauté for 1-2 minutes until fragrant (don't let it burn!).</li>
+        <div></div>
         <li>Combine pasta and sauce: Add the cooked pasta to the skillet and toss it with the garlic butter sauce. Season with salt and pepper.</li>
+        <div></div>
         <li>Add cheese and garnish (optional): Sprinkle Parmesan cheese over the pasta and garnish with fresh parsley if desired.</li>
     </ol>
 </body>
