--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Grilled Cheese</h1>
+    <h1 class="header1">Grilled Cheese</h1>
 
     <img src="..\Grilled-Cheese-Sandwich-SQ.jpg" alt="Grilled Cheese Image">
-    <h3>Description</h3>
+    <h3 class="header3">Description</h3>
+    <div></div>
     <p>This recipes only takes 3 ingredients and less than 15 minutes!</p>
-    <h3>Ingredients</h3>
+    <div></div>
+    <div></div>
+    <h3 class="header3">Ingredients</h3>
 
+    <div></div>
     <li>4 Slices of Bread (any kind)</li>
     <li>3 Tablespoons of Butter</li>
     <li>2 Slices of Cheddar Cheese</li>
 
-    <h3>Steps: </h3>
+    <div></div>
+    <h3 class="header3">Steps: </h3>
     <ol>
         <li>Preheat a nonstick skillet over medium heat. Generously butter one side of a slice of bread. Place bread butter-side down in the hot skillet; add 1 slice of cheese. Butter a second slice of bread on one side and place butter-side up on top of cheese.</li>
+        <div></div>
         <li>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted. Repeat with remaining 2 slices of bread, butter, and slice of cheese.</li>
     </ol>
 
